[package]
name = "blkstrm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
color-eyre = "0.6.2"
futures = "0.3.24"
sender-sink = "0.2.0"
snafu = "0.7.1"
stream-cancel = "0.8.1"
tokio = { version = "1.21.2", features = ["full"] }
